grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grpc-petstore
  name: grpc-petstore
  namespace: default
spec:
  selector:
    matchLabels:
      app: grpc-petstore
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc-petstore
    spec:
      containers:
      - image: soloio/grpcstore-demo:latest
        name: grpc-petstore
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-petstore
  namespace: default
  labels:
    service: grpc-petstore
spec:
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8080
  selector:
    app: grpc-petstore
