virtual-service.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: vs
  namespace: gloo-system
spec:
  virtualHost:
    routes:
      - matchers:
        - exact: /all-pets
        options:
          prefixRewrite: /api/pets
        routeAction:
          single:
            upstream:
              name: default-petstore-8002
              namespace: gloo-system
      - matchers:
        - prefix: /
        routeAction:
          single:
            upstream:
              name: default-grpc-petstore-8001
              namespace: gloo-system
